# CASMcode_project

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_requirements.txt  dev_requirements.txt  doc_requirements.txt  notebooks_requirements.txt  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
casm/project/: _BsetData.py  _ClexDescription.py  _CompositionAxes.py  _ConfigCompositionCalculator.py  _ConfigCorrCalculator.py  _ConfigEnumRunner.py  _DirectoryStructure.py  _EnumData.py  _FittingData.py  _Project.py  _ProjectSettings.py  __init__.py  _ase_utils.py  _display_bset.py  _methods.py  _misc.py  _print_bset.py  _symgroup.py  ase_utils.py  json_io.py
casm/project/bset/: _BsetCommand.py  _BsetData.py  _ConfigCorrCalculator.py  __init__.py  _print_bset.py
casm/project/commands/: _BsetCommand.py  _CalcCommand.py  _EnumCommand.py  _ImportCommand.py  _SymCommand.py  __init__.py
casmnb/: conf.json  index.html.j2
casmnb/static/: casm.css
doc/: README.md  conf.py  index.rst  installation.rst  usage.rst
doc/_static/css/: custom.css
doc/_templates/: custom-class-template.rst  custom-module-template.rst
doc/reference/casm/: index.rst
doc/usage/: quick_start.rst
notebooks/: .gitignore  Bset_basics.ipynb  Bset_display.ipynb  SiGe_occ_part1.ipynb  SiGe_occ_part2.ipynb  casmnb.py
notebooks/SiGe_occ/: SiGe_occ_part1.ipynb
notebooks/input/: eci.json  system.json
notebooks/input/dummy_vasp_potentials/potpaw_PBE/Ge_d/: POTCAR
notebooks/input/dummy_vasp_potentials/potpaw_PBE/O/: POTCAR
notebooks/input/dummy_vasp_potentials/potpaw_PBE/Si/: POTCAR
notebooks/input/dummy_vasp_potentials/potpaw_PBE/Zr_sv/: POTCAR
notebooks/input/prim/: FCC_Cmagspin_prim.json  FCC_Hstrain_prim.json  FCC_binary_Cmagspin_prim.json  FCC_binary_Hstrain_disp_prim.json  FCC_disp_prim.json  FCC_mol_prim.json  FCC_ternary_prim.json  SiGe_occ_Hstrain_prim.json  SiGe_occ_prim.json  ZrO_prim.json
tests/: conftest.py  test_bset.py  test_calc_ase_vasp_setup.py  test_composition_axes.py  test_make_symmetrized_lattice.py  test_notebooks.py  test_project.py
tests/bset/: test_pretty_print.py
tests/bset/data/: SiGe_basis.json  SiGe_prim.json  SiGe_variables.json
tests/notebooks/: ZrO.ipynb
